fix the mobile overflow text

--- a/src/components/UserPage/ChallengeContent.css
+++ b/src/components/UserPage/ChallengeContent.css
@@ -15,6 +15,7 @@ pre {
     margin-top: -10px;
     font-size: 20px;
     font-style: italic;
+    
 }
 
 #intro {
@@ -75,7 +76,8 @@ pre {
     }
     .user-page{
         margin-top: 100px;
-
     }
-
+    #intro {
+        width: 90vw;
+    }
 }
